// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`blockObjects bookmark no option 1`] = `
{
  "bookmark": {
    "caption": undefined,
    "url": "url",
  },
  "type": "bookmark",
}
`;

exports[`blockObjects bookmark with option 1`] = `
{
  "bookmark": {
    "caption": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
    "url": "url",
  },
  "type": "bookmark",
}
`;

exports[`blockObjects breadcrumb default 1`] = `
{
  "breadcrumb": {},
  "type": "breadcrumb",
}
`;

exports[`blockObjects bulletedListItem no option 1`] = `
{
  "bulleted_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "bulleted_list_item",
}
`;

exports[`blockObjects bulletedListItem no option 2`] = `
{
  "bulleted_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "bulleted_list_item",
}
`;

exports[`blockObjects bulletedListItem no option 3`] = `
{
  "bulleted_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "bulleted_list_item",
}
`;

exports[`blockObjects bulletedListItem no option 4`] = `
{
  "bulleted_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "bulleted_list_item",
}
`;

exports[`blockObjects bulletedListItem with option 1`] = `
{
  "bulleted_list_item": {
    "children": [
      {
        "bulleted_list_item": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "bulleted_list_item",
      },
    ],
    "color": "gray_background",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "bulleted_list_item",
}
`;

exports[`blockObjects callout no option 1`] = `
{
  "callout": {
    "children": undefined,
    "color": "default",
    "icon": {
      "emoji": "🔥",
    },
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "callout",
}
`;

exports[`blockObjects callout no option 2`] = `
{
  "callout": {
    "children": undefined,
    "color": "default",
    "icon": {
      "emoji": "🔥",
    },
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "callout",
}
`;

exports[`blockObjects callout no option 3`] = `
{
  "callout": {
    "children": undefined,
    "color": "default",
    "icon": {
      "emoji": "🔥",
    },
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "callout",
}
`;

exports[`blockObjects callout no option 4`] = `
{
  "callout": {
    "children": undefined,
    "color": "default",
    "icon": {
      "emoji": "🔥",
    },
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "callout",
}
`;

exports[`blockObjects callout with option 1`] = `
{
  "callout": {
    "children": [
      {
        "callout": {
          "children": undefined,
          "color": "default",
          "icon": {
            "emoji": "🔥",
          },
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "callout",
      },
    ],
    "color": "gray_background",
    "icon": {
      "emoji": "🔥",
    },
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "callout",
}
`;

exports[`blockObjects code code 1`] = `
{
  "code": {
    "language": "javascript",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "code",
}
`;

exports[`blockObjects code code 2`] = `
{
  "code": {
    "language": "javascript",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "code",
}
`;

exports[`blockObjects code code 3`] = `
{
  "code": {
    "language": "javascript",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "code",
}
`;

exports[`blockObjects code code 4`] = `
{
  "code": {
    "language": "javascript",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "code",
}
`;

exports[`blockObjects columns default 1`] = `
{
  "column_list": {
    "children": [
      {
        "column": {
          "children": [
            {
              "heading_1": {
                "children": undefined,
                "color": "default",
                "is_toggleable": false,
                "rich_text": [
                  {
                    "annotations": {
                      "bold": false,
                      "code": false,
                      "color": "default",
                      "italic": false,
                      "strikethrough": false,
                      "underline": false,
                    },
                    "text": {
                      "content": "test",
                      "link": null,
                    },
                    "type": "text",
                  },
                ],
              },
              "type": "heading_1",
            },
            {
              "paragraph": {
                "children": undefined,
                "color": "default",
                "rich_text": [
                  {
                    "annotations": {
                      "bold": true,
                      "code": false,
                      "color": "default",
                      "italic": false,
                      "strikethrough": false,
                      "underline": false,
                    },
                    "text": {
                      "content": "test",
                      "link": null,
                    },
                    "type": "text",
                  },
                ],
              },
              "type": "paragraph",
            },
          ],
        },
        "type": "column",
      },
      {
        "column": {
          "children": [
            {
              "heading_1": {
                "children": undefined,
                "color": "default",
                "is_toggleable": false,
                "rich_text": [
                  {
                    "annotations": {
                      "bold": false,
                      "code": false,
                      "color": "default",
                      "italic": false,
                      "strikethrough": false,
                      "underline": false,
                    },
                    "text": {
                      "content": "test",
                      "link": null,
                    },
                    "type": "text",
                  },
                ],
              },
              "type": "heading_1",
            },
            {
              "paragraph": {
                "children": undefined,
                "color": "default",
                "rich_text": [
                  {
                    "annotations": {
                      "bold": false,
                      "code": false,
                      "color": "default",
                      "italic": false,
                      "strikethrough": false,
                      "underline": false,
                    },
                    "text": {
                      "content": "test",
                      "link": null,
                    },
                    "type": "text",
                  },
                ],
              },
              "type": "paragraph",
            },
          ],
        },
        "type": "column",
      },
    ],
  },
  "type": "column_list",
}
`;

exports[`blockObjects divider default 1`] = `
{
  "divider": {},
  "type": "divider",
}
`;

exports[`blockObjects embed no option 1`] = `
{
  "embed": {
    "caption": undefined,
    "url": "test",
  },
  "type": "embed",
}
`;

exports[`blockObjects embed with option 1`] = `
{
  "embed": {
    "caption": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
    "url": "test",
  },
  "type": "embed",
}
`;

exports[`blockObjects equation default 1`] = `
{
  "equation": {
    "expression": "1 + 1",
  },
  "type": "equation",
}
`;

exports[`blockObjects file no option 1`] = `
{
  "file": {
    "caption": undefined,
    "external": {
      "url": "url",
    },
  },
  "type": "file",
}
`;

exports[`blockObjects file with option 1`] = `
{
  "file": {
    "caption": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
    "external": {
      "url": "url",
    },
  },
  "type": "file",
}
`;

exports[`blockObjects heading1 no option 1`] = `
{
  "heading_1": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_1",
}
`;

exports[`blockObjects heading1 no option 2`] = `
{
  "heading_1": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_1",
}
`;

exports[`blockObjects heading1 no option 3`] = `
{
  "heading_1": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_1",
}
`;

exports[`blockObjects heading1 no option 4`] = `
{
  "heading_1": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_1",
}
`;

exports[`blockObjects heading1 with option 1`] = `
{
  "heading_1": {
    "children": [
      {
        "heading_1": {
          "children": undefined,
          "color": "red_background",
          "is_toggleable": false,
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "heading_1",
      },
    ],
    "color": "gray_background",
    "is_toggleable": true,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_1",
}
`;

exports[`blockObjects heading2 no option 1`] = `
{
  "heading_2": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_2",
}
`;

exports[`blockObjects heading2 no option 2`] = `
{
  "heading_2": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_2",
}
`;

exports[`blockObjects heading2 no option 3`] = `
{
  "heading_2": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_2",
}
`;

exports[`blockObjects heading2 no option 4`] = `
{
  "heading_2": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_2",
}
`;

exports[`blockObjects heading2 with option 1`] = `
{
  "heading_2": {
    "children": [
      {
        "heading_2": {
          "children": undefined,
          "color": "red_background",
          "is_toggleable": false,
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "heading_2",
      },
    ],
    "color": "gray_background",
    "is_toggleable": true,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_2",
}
`;

exports[`blockObjects heading3 no option 1`] = `
{
  "heading_3": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_3",
}
`;

exports[`blockObjects heading3 no option 2`] = `
{
  "heading_3": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_3",
}
`;

exports[`blockObjects heading3 no option 3`] = `
{
  "heading_3": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_3",
}
`;

exports[`blockObjects heading3 no option 4`] = `
{
  "heading_3": {
    "children": undefined,
    "color": "default",
    "is_toggleable": false,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_3",
}
`;

exports[`blockObjects heading3 with option 1`] = `
{
  "heading_3": {
    "children": [
      {
        "heading_3": {
          "children": undefined,
          "color": "red_background",
          "is_toggleable": false,
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "heading_3",
      },
    ],
    "color": "gray_background",
    "is_toggleable": true,
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "heading_3",
}
`;

exports[`blockObjects image no option 1`] = `
{
  "image": {
    "caption": undefined,
    "external": {
      "url": "url",
    },
  },
  "type": "image",
}
`;

exports[`blockObjects image with option 1`] = `
{
  "image": {
    "caption": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
    "external": {
      "url": "url",
    },
  },
  "type": "image",
}
`;

exports[`blockObjects linkToPage default 1`] = `
{
  "link_to_page": {
    "page_id": "pageId",
  },
  "type": "link_to_page",
}
`;

exports[`blockObjects numberedListItem no option 1`] = `
{
  "numbered_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "numbered_list_item",
}
`;

exports[`blockObjects numberedListItem no option 2`] = `
{
  "numbered_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "numbered_list_item",
}
`;

exports[`blockObjects numberedListItem no option 3`] = `
{
  "numbered_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "numbered_list_item",
}
`;

exports[`blockObjects numberedListItem no option 4`] = `
{
  "numbered_list_item": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "numbered_list_item",
}
`;

exports[`blockObjects numberedListItem with option 1`] = `
{
  "numbered_list_item": {
    "children": [
      {
        "numbered_list_item": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "numbered_list_item",
      },
    ],
    "color": "gray_background",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "numbered_list_item",
}
`;

exports[`blockObjects paragraph no option 1`] = `
{
  "paragraph": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`blockObjects paragraph no option 2`] = `
{
  "paragraph": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`blockObjects paragraph no option 3`] = `
{
  "paragraph": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`blockObjects paragraph no option 4`] = `
{
  "paragraph": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`blockObjects paragraph with options 1`] = `
{
  "paragraph": {
    "children": [
      {
        "paragraph": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test2",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "paragraph",
      },
    ],
    "color": "red_background",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "paragraph",
}
`;

exports[`blockObjects pdf no option 1`] = `
{
  "pdf": {
    "caption": undefined,
    "external": {
      "url": "url",
    },
  },
  "type": "pdf",
}
`;

exports[`blockObjects pdf with option 1`] = `
{
  "pdf": {
    "caption": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
    "external": {
      "url": "url",
    },
  },
  "type": "pdf",
}
`;

exports[`blockObjects quote no option 1`] = `
{
  "quote": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "quote",
}
`;

exports[`blockObjects quote no option 2`] = `
{
  "quote": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "quote",
}
`;

exports[`blockObjects quote no option 3`] = `
{
  "quote": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "quote",
}
`;

exports[`blockObjects quote no option 4`] = `
{
  "quote": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "quote",
}
`;

exports[`blockObjects quote with option 1`] = `
{
  "quote": {
    "children": [
      {
        "quote": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "quote",
      },
    ],
    "color": "gray_background",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "quote",
}
`;

exports[`blockObjects syncedBlock default 1`] = `
{
  "synced_block": {
    "children": undefined,
    "synced_from": null,
  },
  "type": "synced_block",
}
`;

exports[`blockObjects syncedBlock default 2`] = `
{
  "synced_block": {
    "children": [
      {
        "paragraph": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "paragraph",
      },
    ],
    "synced_from": null,
  },
  "type": "synced_block",
}
`;

exports[`blockObjects syncedBlock default 3`] = `
{
  "synced_block": {
    "children": undefined,
    "synced_from": {
      "block_id": "blockId",
    },
  },
  "type": "synced_block",
}
`;

exports[`blockObjects syncedBlock default 4`] = `
{
  "synced_block": {
    "children": [
      {
        "paragraph": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "paragraph",
      },
    ],
    "synced_from": {
      "block_id": "blockId",
    },
  },
  "type": "synced_block",
}
`;

exports[`blockObjects table default 1`] = `
{
  "table": {
    "children": [
      {
        "table_row": {
          "cells": [
            [
              {
                "annotations": {
                  "bold": false,
                  "code": false,
                  "color": "default",
                  "italic": false,
                  "strikethrough": false,
                  "underline": false,
                },
                "text": {
                  "content": "test",
                  "link": null,
                },
                "type": "text",
              },
            ],
          ],
        },
        "type": "table_row",
      },
    ],
    "has_column_header": false,
    "has_row_header": false,
    "table_width": 2,
  },
  "type": "table",
}
`;

exports[`blockObjects table default 2`] = `
{
  "table": {
    "children": [
      {
        "table_row": {
          "cells": [
            [
              {
                "annotations": {
                  "bold": false,
                  "code": false,
                  "color": "default",
                  "italic": false,
                  "strikethrough": false,
                  "underline": false,
                },
                "text": {
                  "content": "test",
                  "link": null,
                },
                "type": "text",
              },
            ],
          ],
        },
        "type": "table_row",
      },
    ],
    "has_column_header": true,
    "has_row_header": false,
    "table_width": 2,
  },
  "type": "table",
}
`;

exports[`blockObjects table default 3`] = `
{
  "table": {
    "children": [
      {
        "table_row": {
          "cells": [
            [
              {
                "annotations": {
                  "bold": false,
                  "code": false,
                  "color": "default",
                  "italic": false,
                  "strikethrough": false,
                  "underline": false,
                },
                "text": {
                  "content": "test",
                  "link": null,
                },
                "type": "text",
              },
            ],
          ],
        },
        "type": "table_row",
      },
    ],
    "has_column_header": false,
    "has_row_header": true,
    "table_width": 2,
  },
  "type": "table",
}
`;

exports[`blockObjects tableOfContents no option 1`] = `
{
  "table_of_contents": {
    "color": "default",
  },
  "type": "table_of_contents",
}
`;

exports[`blockObjects tableOfContents with option 1`] = `
{
  "table_of_contents": {
    "color": "gray_background",
  },
  "type": "table_of_contents",
}
`;

exports[`blockObjects template default 1`] = `
{
  "template": {
    "children": [
      {
        "paragraph": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "paragraph",
      },
    ],
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "template",
}
`;

exports[`blockObjects template default 2`] = `
{
  "template": {
    "children": [
      {
        "paragraph": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "paragraph",
      },
    ],
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "template",
}
`;

exports[`blockObjects template default 3`] = `
{
  "template": {
    "children": [
      {
        "paragraph": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "paragraph",
      },
    ],
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "template",
}
`;

exports[`blockObjects template default 4`] = `
{
  "template": {
    "children": [
      {
        "paragraph": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "paragraph",
      },
    ],
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "template",
}
`;

exports[`blockObjects todo no option 1`] = `
{
  "to_do": {
    "checked": false,
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "to_do",
}
`;

exports[`blockObjects todo no option 2`] = `
{
  "to_do": {
    "checked": false,
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "to_do",
}
`;

exports[`blockObjects todo no option 3`] = `
{
  "to_do": {
    "checked": false,
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "to_do",
}
`;

exports[`blockObjects todo no option 4`] = `
{
  "to_do": {
    "checked": false,
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "to_do",
}
`;

exports[`blockObjects todo with option 1`] = `
{
  "to_do": {
    "checked": true,
    "children": [
      {
        "to_do": {
          "checked": false,
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "to_do",
      },
    ],
    "color": "gray_background",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "to_do",
}
`;

exports[`blockObjects toggle no option 1`] = `
{
  "toggle": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "toggle",
}
`;

exports[`blockObjects toggle no option 2`] = `
{
  "toggle": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "toggle",
}
`;

exports[`blockObjects toggle no option 3`] = `
{
  "toggle": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "toggle",
}
`;

exports[`blockObjects toggle no option 4`] = `
{
  "toggle": {
    "children": undefined,
    "color": "default",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
      {
        "annotations": {
          "bold": true,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "toggle",
}
`;

exports[`blockObjects toggle with option 1`] = `
{
  "toggle": {
    "children": [
      {
        "toggle": {
          "children": undefined,
          "color": "default",
          "rich_text": [
            {
              "annotations": {
                "bold": false,
                "code": false,
                "color": "default",
                "italic": false,
                "strikethrough": false,
                "underline": false,
              },
              "text": {
                "content": "test",
                "link": null,
              },
              "type": "text",
            },
          ],
        },
        "type": "toggle",
      },
    ],
    "color": "gray_background",
    "rich_text": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test",
          "link": null,
        },
        "type": "text",
      },
    ],
  },
  "type": "toggle",
}
`;

exports[`blockObjects video no option 1`] = `
{
  "type": "video",
  "video": {
    "caption": undefined,
    "external": {
      "url": "url",
    },
  },
}
`;

exports[`blockObjects video with option 1`] = `
{
  "type": "video",
  "video": {
    "caption": [
      {
        "annotations": {
          "bold": false,
          "code": false,
          "color": "default",
          "italic": false,
          "strikethrough": false,
          "underline": false,
        },
        "text": {
          "content": "test2",
          "link": null,
        },
        "type": "text",
      },
    ],
    "external": {
      "url": "url",
    },
  },
}
`;
